herosection image fixed

--- a/index.html
+++ b/index.html
@@ -69,11 +69,10 @@
 
 
     <!-- ........................................................................hero section.................................................. -->
-    <section class="bg-gradient-to-r from-herogradient1 to-herogradient2 py-12">
+    <section class="bg-gradient-to-r from-herogradient1 to-herogradient2 py-12 overflow-x-hidden">
         <div class="flex flex-col lg:flex-row justify-between items-center gap-8 px-4">
             <!-- Left Content -->
             <div class="lg:text-left max-w-md mx-auto lg:ml-24 px-4 lg:px-0">
-
                 <p class="font-Righteous text-primary text-lg text-center lg:text-left">
                     Successful coaches are visionaries
                 </p>
@@ -109,7 +108,7 @@
 
             <!-- Right Content -->
             <div class="text-center lg:text-left max-w-md relative">
-                <!-- ............shyam float....................................... -->
+                <!-- Shyam Float -->
                 <div class="flex flex-row absolute -top-[26px] -left-[448px] md:hidden lg:flex-row lg:flex">
                     <img class="" src="./public/herovertical.png">
                     <div class="flex flex-col ">
@@ -124,18 +123,16 @@
                     </div>
 
                 </div>
-                <!-- hero arch -->
-                <!-- <div class="">
-                    <img class=" absolute h-16 right-[647px] top-[400px]" src="./public/heroarch1.png">
-                    <img class=" absolute h-18 right-[647px] top-[400px]" src="./public/heroarch2.png">
-                    <img class=" absolute h-16 right-[647px] top-[400px]" src="./public/heroarch3.png">
-                </div> -->
-                <!-- .........................................women img................. -->
-                <img class="h-64 lg:h-96 mx-auto lg:mx-0 mt-4 pr-24 pb-0" src="./public/women-laptop.png"
-                    alt="Woman with laptop">
+                <!-- Hero Image -->
+                <img class="w-96" src="./public/Ellipsewhite background.png" alt="Ellipse">
+
+                <!-- Woman with Laptop Image -->
+                <img class="absolute top-[20px] -right-[40px] h-80 lg:h-96 mx-auto lg:mx-0 mt-4 pr-24 pb-0"
+                    src="./public/brunette-woman-hugging-laptop_1-removebg-preview.png" alt="Woman with laptop">
             </div>
         </div>
     </section>
+
     <!-- .......................................................music................................................................ -->
     <section class="bg-gradient-to-b from-musicbg1 to-musicbg2">
         <div class="flex flex-row justify-around items-center gap-10 text-center p-5 flex-wrap">
