footer logo fixed

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                     class="w-full md:w-[30%] flex flex-col justify-center items-center md:items-start text-center md:text-left mb-6 md:mb-0 md:pb-10 space-y-7">
                     <p class="text-[#0A033C] font-Righteous text-2xl">Connect</p>
                     <div class="bg-transparent">
-                        <img class="bg-transparent h-16" src="./public/logo.png" alt="Logo">
+                        <img class="bg-transparent h-16" src="./public/logo-removebg-preview.png" alt="Logo">
                     </div>
                     <p class="text-[#000000] w-[80%]">
                         Sri Jagannath Nivas, 8-1-164/345/A/1, Pragati Colony, Mailardevpally, Nawab Saheb Kunta, Hyd,
