--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <img class="w-96" src="./public/Ellipsewhite background.png" alt="Ellipse">
 
                 <!-- Woman with Laptop Image -->
-                <img class="absolute top-[20px] -right-[40px] h-80 lg:h-96 mx-auto lg:mx-0 mt-4 pr-24 pb-0"
+                <img class="absolute top-[20px] -right-[40px] h-80 lg:h-[30rem] mx-auto lg:mx-0 mt-4 pr-24 pb-0"
                     src="./public/brunette-woman-hugging-laptop_1-removebg-preview.png" alt="Woman with laptop">
             </div>
         </div>
